页表映射完成

--- a/kernel/memory/2. 页表映射过程/1. ARM32页表映射.md
+++ b/kernel/memory/2. 页表映射过程/1. ARM32页表映射.md
@@ -383,7 +383,7 @@ pmd_none()检查这个参数的对应的PMD表项的内容，如果为0，说明
 
 先回答刚才的问题：ARM架构中一级页表的PGD的偏移量应该从20位开始，为何这里的头文件定义从21位开始呢？
 
--  这里分配了两个PTRS_PER_PTE(512)个页面表项，也就是分配了两份页面表项。**因为Linux内核默认的PGD从21位开始，也就是bit[31:21]，一共2048个一级页表项；**而ARM32硬件结构上，PGD是从20bit开始的，页表项为4096个，比Linux内核多一倍，那么代码实现上取巧了，以PTE_HWTABLE_OFF为偏移来写PGD表项。而在真实硬件中，一个PGD页表项，只有256个PTE，也就是说，前512个PTE页表项是给OS用的（也就是Linux内核用的页表，可以用于模拟L_PTE_DIRTY、L_PTE_YOUNG等标志位），后512个页面表是给ARM硬件MMU使用的；
+- 这里分配了两个PTRS_PER_PTE(512)个页面表项，也就是分配了两份页面表项。**因为Linux内核默认的PGD从21位开始，也就是bit[31:21]，一共2048个一级页表项；**而ARM32硬件结构上，PGD是从20bit开始的，页表项为4096个，比Linux内核多一倍，那么代码实现上取巧了，以PTE_HWTABLE_OFF为偏移来写PGD表项。而在真实硬件中，一个PGD页表项，只有256个PTE，也就是说，前512个PTE页表项是给OS用的（也就是Linux内核用的页表，可以用于模拟L_PTE_DIRTY、L_PTE_YOUNG等标志位），后512个页面表是给ARM硬件MMU使用的；
 
 - 一次映射两个相邻的一级页表项，也就是对应的两个相邻的二级页表都存放在一个page中；
 
@@ -472,4 +472,78 @@ ENDPROC(cpu_v7_set_pte_ext)
 ```
 
 cpu_v7_set_pte_ext()函数参数r0表示PTE entry页表项的指针，注意ARM Linux中实现了两份页表，硬件页表的地址r0+2048。因此r0指Linux版本的页面表地址，r1表示要写入的Linux版本的PTE页面表项内容，这里指Linux版本的页面表项内容，而非硬件版本的页面表项内容。该函数的主要目的是根据Linux版本的页面表项内容来填充ARM硬件版本的页表项；
+
+首先把linux内核版本的页表项内容写入linux版本的页表中，然后根据mem_type数据结构prot_pte的标志位来设置ARMV7-A硬件相关标志位。prot_pte的标志位是linux内核中采用的，定义在`arch/arm/include/asm/pgtable-2level.h`头文件。而硬件相关的标志位定义在`arch/arm/include/asm/pgtable-2level-hwdef.h`头文件。这两个标志位对应的偏移是不一样的，所以不同架构下的处理器需要单独处理。ARM32架构硬件PTE页面表定义的标志位如下：
+
+```
+/*
+ *   - extended small page/tiny page
+ */
+#define PTE_EXT_XN		(_AT(pteval_t, 1) << 0)		/* v6 */
+#define PTE_EXT_AP_MASK		(_AT(pteval_t, 3) << 4)
+#define PTE_EXT_AP0		(_AT(pteval_t, 1) << 4)
+#define PTE_EXT_AP1		(_AT(pteval_t, 2) << 4)
+#define PTE_EXT_AP_UNO_SRO	(_AT(pteval_t, 0) << 4)
+#define PTE_EXT_AP_UNO_SRW	(PTE_EXT_AP0)
+#define PTE_EXT_AP_URO_SRW	(PTE_EXT_AP1)
+#define PTE_EXT_AP_URW_SRW	(PTE_EXT_AP1|PTE_EXT_AP0)
+#define PTE_EXT_TEX(x)		(_AT(pteval_t, (x)) << 6)	/* v5 */
+#define PTE_EXT_APX		(_AT(pteval_t, 1) << 9)		/* v6 */
+#define PTE_EXT_COHERENT	(_AT(pteval_t, 1) << 9)		/* XScale3 */
+#define PTE_EXT_SHARED		(_AT(pteval_t, 1) << 10)	/* v6 */
+#define PTE_EXT_NG		(_AT(pteval_t, 1) << 11)	/* v6 */
+```
+
+linux内核定义的PTE页面表相关的软件标志位如下：
+
+```
+/*
+ * "Linux" PTE definitions.
+ *
+ * We keep two sets of PTEs - the hardware and the linux version.
+ * This allows greater flexibility in the way we map the Linux bits
+ * onto the hardware tables, and allows us to have YOUNG and DIRTY
+ * bits.
+ *
+ * The PTE table pointer refers to the hardware entries; the "Linux"
+ * entries are stored 1024 bytes below.
+ */
+#define L_PTE_VALID		(_AT(pteval_t, 1) << 0)		/* Valid */
+#define L_PTE_PRESENT		(_AT(pteval_t, 1) << 0)
+#define L_PTE_YOUNG		(_AT(pteval_t, 1) << 1)
+#define L_PTE_DIRTY		(_AT(pteval_t, 1) << 6)
+#define L_PTE_RDONLY		(_AT(pteval_t, 1) << 7)
+#define L_PTE_USER		(_AT(pteval_t, 1) << 8)
+#define L_PTE_XN		(_AT(pteval_t, 1) << 9)
+#define L_PTE_SHARED		(_AT(pteval_t, 1) << 10)	/* shared(v6), coherent(xsc3) */
+#define L_PTE_NONE		(_AT(pteval_t, 1) << 11)
+```
+
+第9~10行代码设置ARM硬件页表的PTE_EXT_TEX比特位；
+
+第13~15行代码设置ARM硬件页表的PTE_EXT_APX比特位；
+
+第17~18行代码设置ARM硬件页表的PTE_EXT_AP1比特位；
+
+第20~21行代码设置ARM硬件页表的PTE_EXT_XN比特位；
+
+第23~27行代码，在旧版本中的linux内核代码中（例如linux3.7），等同如下代码片段：
+
+```
+tst r1, #L_PTE_YOUNG
+tstne r1, #L_PTE_PRESENT
+moveq r3, #0
+```
+
+如果没有设置L_PTE_YOUNG并且L_PTE_PRESENT置位，那就保持Linux版本的页表不变，把ARM32硬件版本的页表表项内容清零。代码中的L_PTE_VAILD和L_PTE_NONE这两个软件比特位是后来添加的，因此在linux3.7及以前内核版本中更加容易理解；
+
+为什么这里要把ARM硬件版本的页面表项内容清零呢？我们观察ARM32硬件版本的页面表的相关标志位会发现，没有表示被访问和页面在内存中的硬件标志位。linux内核最早基于x86体系结构设计的，所以linux内核关于页表的许多术语和设计都是针对x86体系的，而ARM  Linux只能从软件架构上去跟随了，因此设计了两套页表。在x86的页表中有3个标志位是ARM32硬件页面表没有提供的。
+
+- PTE_DIRTY: CPU是写操作时会设置该标志位，表示该页表被写过，为脏页；
+- PTE_YOUNG： CPU访问该页时会设置该标志位，在页面换出的时候，如果该标志位置位了，说明该页刚被访问过，页面是young的，不适合把该页换出，同事清除该标志位；
+- PTE_PRESENT：表示该页在内存中；
+
+因此在ARM Linux中实现中需要模拟上述3个比特位；
+
+如何模拟PTE_DIRTY呢？在ARM MMU硬件中为一个干净页面建立映射时，设置硬件页表项是只读权限的。当往一个干净页表写入时，会触发写权限缺页中断（虽然linux版本的页面表项标记了可写权限，但是ARM硬件页面表项还不具有写入权限），那么在缺页中断处理handle_pte_falut()会在该页的linux版本中PTE页面表项标记为"dirty"，并且发现PTE页表项内容改变了，ptep_set_access_flags()函数会把新的linux版本的页表项内容写入硬件页表，从而实现模拟过程；
 
