增加ARM64页表映射

--- a/kernel/memory/2. 页表映射过程/2. ARM64页表映射.md
+++ b/kernel/memory/2. 页表映射过程/2. ARM64页表映射.md
@@ -157,6 +157,127 @@ static void  __create_mapping(struct mm_struct *mm, pgd_t *pgd,
 
 ```
 [create_mapping->__create_mapping->alloc_init_pud]
-static void alloc_init
+static void __init alloc_init_pud(pgd_t *pgd, unsigned long addr,
+				  unsigned long end, phys_addr_t phys,
+				  const struct mem_type *type)
+{
+	pud_t *pud = pud_offset(pgd, addr);
+	unsigned long next;
+
+	do {
+		next = pud_addr_end(addr, end);
+		alloc_init_pmd(pud, addr, next, phys, type);
+		phys += next - addr;
+	} while (pud++, addr = next, addr != end);
+}
 ```
 
+alloc_init_pud()函数会做如下事情：
+
+（1）通过pgd_none()判断当前PGD表项内容是否为空。如果PGD表项为空，说明下一级页表为空，那么需要动态分配下一级页表。下一级页表PUD一共有PTRS_PER_PUD个页表项，即512个表项，然后通过pgd_populate()把刚分配的PUD页表设置到相应的PGD页表项中。
+
+（2）通过pud_offset()来获取相应的PUD表项。这里会通过pud_index()宏来计算索引值，计算方法和pgd_index()函数类似，最终会使用虚拟地址的bit[38~30]位来做索引。
+
+（3）接下来是以PUD_SIZE（即1<<30，1GB）为步长，通过while循环来设置下一级页表。
+
+（4）`use_1G_block()`函数会判断是否使用1GB大小的block来映射？当这里要映射的大小内存块正好是PUD_SIZE，那么只需要映射到PUD就好了，接下来的PMD和PTE页表等到真正需要使用时再映射，通过set_pud()函数来设置PUD表项；
+
+（5）如果use_1G_block()函数判断不能通过1GB大小来映射，那么就需要alloc_init_pmd()函数来进行下一级页表映射。
+
+```
+static void alloc_init_pmd(struct mm_struct *mm, pud_t *pud,
+				  unsigned long addr, unsigned long end,
+				  phys_addr_t phys, pgprot_t prot,
+				  void *(*alloc)(unsigned long size))
+{
+	pmd_t *pmd;
+	unsigned long next;
+
+	/*
+	 * Check for initial section mappings in the pgd/pud and remove them.
+	 */
+	if (pud_none(*pud) || pud_sect(*pud)) {
+		pmd = alloc(PTRS_PER_PMD * sizeof(pmd_t));
+		if (pud_sect(*pud)) {
+			/*
+			 * need to have the 1G of mappings continue to be
+			 * present
+			 */
+			split_pud(pud, pmd);
+		}
+		pud_populate(mm, pud, pmd);
+		flush_tlb_all();
+	}
+	BUG_ON(pud_bad(*pud));
+
+	pmd = pmd_offset(pud, addr);
+	do {
+		next = pmd_addr_end(addr, end);
+		/* try section mapping first */
+		if (((addr | next | phys) & ~SECTION_MASK) == 0) {
+			pmd_t old_pmd =*pmd;
+			set_pmd(pmd, __pmd(phys |
+					   pgprot_val(mk_sect_prot(prot))));
+			/*
+			 * Check for previous table entries created during
+			 * boot (__create_page_tables) and flush them.
+			 */
+			if (!pmd_none(old_pmd)) {
+				flush_tlb_all();
+				if (pmd_table(old_pmd)) {
+					phys_addr_t table = __pa(pte_offset_map(&old_pmd, 0));
+					if (!WARN_ON_ONCE(slab_is_available()))
+						memblock_free(table, PAGE_SIZE);
+				}
+			}
+		} else {
+			alloc_init_pte(pmd, addr, next, __phys_to_pfn(phys),
+				       prot, alloc);
+		}
+		phys += next - addr;
+	} while (pmd++, addr = next, addr != end);
+}
+```
+
+alloc_init_pmd()函数用于配置PMD页表，主要做如下事情：
+
+（1）首先判断PUD页表项的内容是否为空？如果为空，表示PUD指向的下一级页表PMD不存在，需要动态分配PMD页表。分配PTRS_PER_PMD个页表，即512个，然后通过pud_populate()来设置pud页表项。
+
+（2）通过pmd_offset()宏来获取相应的PUD表项。这里会通过pud_index()来计算索引值，计算方法和pgd_index()函数类似，最终使用虚拟地址bit[29:21]位来做索引值。
+
+（3）接下来以PMD_SIZE（即1<<21，2MB）为步长，通过while循环来设置下一级页表；
+
+（4）如果虚拟区间的开始地址addr和结束地址next，以及物理地址phys都与SECTION_SIZE(2MB)大小对齐，那么直接设置PMD页表项，不需要映射下一级页表。下一级页表等到需要用时再映射也来得及，所以这里直接通过set_pmd()来设置PMD页表项；
+
+（5）如果映射的内存不是和SECTION_SIZE对齐的，那么需要alloc_init_pte()函数来映射下一级PTE页表。
+
+```
+static void alloc_init_pte(pmd_t *pmd, unsigned long addr,
+				  unsigned long end, unsigned long pfn,
+				  pgprot_t prot,
+				  void *(*alloc)(unsigned long size))
+{
+	pte_t *pte;
+
+	if (pmd_none(*pmd) || pmd_sect(*pmd)) {
+		pte = alloc(PTRS_PER_PTE * sizeof(pte_t));
+		if (pmd_sect(*pmd))
+			split_pmd(pmd, pte);
+		__pmd_populate(pmd, __pa(pte), PMD_TYPE_TABLE);
+		flush_tlb_all();
+	}
+	BUG_ON(pmd_bad(*pmd));
+
+	pte = pte_offset_kernel(pmd, addr);
+	do {
+		set_pte(pte, pfn_pte(pfn, prot));
+		pfn++;
+	} while (pte++, addr += PAGE_SIZE, addr != end);
+}
+```
+
+PTE页表是4级页表的最后一级，alloc_init_pte()配置PTE页表项。
+
+（1）首先判断PMD表项内容是否为空，如果为空，说明下一级页表不存在，需要动态分配512个页表项，然后通过__pmd_populate()函数来设置PMD页表项。
+
+（2）通过pte_offset_kernel()宏定义来索引到相应的PTE页表项。索引值可以通过pte_index()
