增加ARM32内核内存布局图

--- a/kernel/memory/3. 内核内存布局图/1. ARM32内核内存布局图.md
+++ b/kernel/memory/3. 内核内存布局图/1. ARM32内核内存布局图.md
@@ -59,5 +59,27 @@ Linux内核在启动时会打印出内核内存空间的布局图，下面是ARM
 #endif
 ```
 
-用户空间和内核空间使用3:1的划分方法时，内核空间只有1GB大小。这1GB的映射空间，其中有一部分用于直接映射物理地址。这个区域称为线性映射区。在ARM32平台上，物理地址[0:760MB]的这一部分内存被线性映射到[3GB:3GB+768MB]的虚拟地址上。线性映射区的虚拟地址和物理地址相差PAGE_OFFSET，即3GB。内核中有相关的宏来实现
+用户空间和内核空间使用3:1的划分方法时，内核空间只有1GB大小。这1GB的映射空间，其中有一部分用于直接映射物理地址。这个区域称为线性映射区。在ARM32平台上，物理地址[0:760MB]的这一部分内存被线性映射到[3GB:3GB+768MB]的虚拟地址上。**线性映射区的虚拟地址和物理地址相差PAGE_OFFSET**，即3GB。内核中有相关的宏来实现线性映射区虚拟地址与物理地址的查找过程，例如`__pa(x)`和`__va(x)`
+
+```
+[arch/arm/include/asm/memory.h]
+#define __pa(x)	__virt_to_phys((unsigned long)(x))
+#define __va(x) ((void *)__phys_to_virt(phys_addr_t)(x))
+static inline phys_addr_t __virt_to_phys(unsigned long x)
+{
+	return (phys_addr_t)x - PAGE_OFFSET + PHYS_OFFSET;
+}
+
+static inline unsigned long __phys_to_virt(phys_addr_t x)
+{
+	return x - PHYS_OFFSET + PAGE_OFFSET;
+}
+
+```
+
+其中，__pa()把线性映射区的虚拟地址转换为物理地址，转换公式很简单，即用虚拟地址减去PAGE_OFFSET(3GB)，然后再加上PHYS_OFFSET（这个值在有的ARM平台上为0，在ARM Vexpress平台该值为0x6000_0000）。
+
+那么高端内存的起始地址（760MB）如何确定呢？
+
+在内核初始化内存时，在`santiy_check_meminfo()`函数中确定高端内存的起始地址，全局变量high_memory来存放高端内存的起始地址
 
