更新ARM32内核内存布局图

--- a/kernel/memory/3. 内核内存布局图/1. ARM32内核内存布局图.md
+++ b/kernel/memory/3. 内核内存布局图/1. ARM32内核内存布局图.md
@@ -81,5 +81,42 @@ static inline unsigned long __phys_to_virt(phys_addr_t x)
 
 那么高端内存的起始地址（760MB）如何确定呢？
 
-在内核初始化内存时，在`santiy_check_meminfo()`函数中确定高端内存的起始地址，全局变量high_memory来存放高端内存的起始地址
+在内核初始化内存时，在`santiy_check_meminfo()`函数中确定高端内存的起始地址，全局变量high_memory来存放高端内存的起始地址。
+
+```
+static void * __initdata vmalloc_min =
+	(void *)(VMALLOC_END - (240 << 20) - VMALLOC_OFFSET);
+void __init sanity_check_meminfo(void)
+{
+	phys_addr_t vmalloc_limit = __pa(vmalloc_min - 1) + 1;
+	arm_lowmem_limit = vmalloc_limit;
+	high_memory = __va(arm_lowmem_limit - 1) + 1;
+}
+```
+
+vmalloc_min计算出来的结果是0x2F80_0000，即760MB；
+
+为什么内核只线性映射760MB呢？剩下的264MB的虚拟地址空间用来做什么呢？
+
+那是保留给vmallc，fixmap和高端向量等使用的。内核许多驱动使用vmalloc来分配连续的虚拟地址的内存，因为有的驱动不需要连续的物理地址的内存；除此之外，vmalloc还可以用于高端内存的临时映射。一个32bit系统中实际支持的内存数量会超过内核线性映射的长度，但是内核具有对所有内存的寻找能力。
+
+```
+/*
+ * Just any arbitrary offset to the start of the vmalloc VM area: the
+ * current 8MB value just means that there will be a 8MB "hole" after the
+ * physical memory until the kernel virtual memory starts.  That means that
+ * any out-of-bounds memory accesses will hopefully be caught.
+ * The vmalloc() routines leaves a hole of 4kB between each vmalloced
+ * area for the same reason. ;)
+ */
+#define VMALLOC_OFFSET		(8*1024*1024)
+#define VMALLOC_START		(((unsigned long)high_memory + VMALLOC_OFFSET) & ~(VMALLOC_OFFSET-1))
+#define VMALLOC_END		0xff000000UL
+```
+
+vmalloc区域在ARM32内核中，从VMALLOC_START开始到VMALLOC_END结束，即从0xf000_0000到0xff00_0000，大小为240MB。从VMALLOC_START开始之前有一个8MB的洞，用于捕捉越界访问。
+
+内核通常把物理内存低于760MB的称为线性映射内存（Normal Memory），而高于760MB以上的称为高端内存（High Memory）。由于32位系统的寻址能力只有4GB，对于物理内存高于760MB而低于4GB的情况，我们可以从保留240MB的虚拟地址划出一部分用于动态映射高端内存，这样内核就可以访问到全部的4GB的内存了。如果物理内存高于4GB，那么在ARMv7-A架构中就要使用LPE机制来扩展物理内存访问了。用于映射高端内存的虚拟地址空间有限，所以又可以划分为两部分，一部分是临时映射区，另一部分为固定映射区。PKMAP指向的就是固定映射区。如图2.6所示是ARM Vexpress平台上画出内核空间的内存布局图，详细可以参考文档documentation/arm/memory.txt文件。
+
+![](../picture/ARM32内核内存布局图.png)
 
