继续update物理页面

--- a/kernel/memory/4. 分配物理页面/1.伙伴系统分配内存.md
+++ b/kernel/memory/4. 分配物理页面/1.伙伴系统分配内存.md
@@ -197,3 +197,187 @@ GFP_ZONEMASK是分配掩码的低4位，在ARM Vexprss平台上，只有ZONE_NOR
 
 在上述例子中，以GFP_KERNEL分配掩码(0xd0)为参数代入gfp_zone()函数中，最终结果为0，即high_zoneidx为0。
 
+另外`__alloc_pages_nodemask()`第15行代码中的`gfpflags_to_migratetype()`函数把gfp_mask分配掩码转换成`MIGRATE_TYPES`类型是`MIGRATE_UNMOVABLE`；如果分配掩码为`GFP_HIGHUSER_MOVABLE`，那么`MIGRATE_TYPES`类型是`MIGRATE_MOVABLE`。
+
+```
+/* Convert GFP flags to their corresponding migrate type */
+static inline int gfpflags_to_migratetype(const gfp_t gfp_flags)
+{
+	WARN_ON((gfp_flags & GFP_MOVABLE_MASK) == GFP_MOVABLE_MASK);
+
+	if (unlikely(page_group_by_mobility_disabled))
+		return MIGRATE_UNMOVABLE;
+
+	/* Group based on mobility */
+	return (((gfp_flags & __GFP_MOVABLE) != 0) << 1) |
+		((gfp_flags & __GFP_RECLAIMABLE) != 0);
+}
+```
+
+继续回到`__alloc_pages_nodemask()`函数中。
+
+```
+[__alloc_pages_nodemask]
+retry_cpuset:
+	cpuset_mems_cookie = read_mems_allowed_begin();
+
+	/* We set it here, as __alloc_pages_slowpath might have changed it */
+	ac.zonelist = zonelist;
+	/* The preferred zone is used for statistics later */
+	preferred_zoneref = first_zones_zonelist(ac.zonelist, ac.high_zoneidx,
+				ac.nodemask ? : &cpuset_current_mems_allowed,
+				&ac.preferred_zone);
+	if (!ac.preferred_zone)
+		goto out;
+	ac.classzone_idx = zonelist_zone_idx(preferred_zoneref);
+
+	/* First allocation attempt */
+	alloc_mask = gfp_mask|__GFP_HARDWALL;
+	page = get_page_from_freelist(alloc_mask, order, alloc_flags, &ac);
+	if (unlikely(!page)) {
+		/*
+		 * Runtime PM, block IO and its error handling path
+		 * can deadlock because I/O on the device might not
+		 * complete.
+		 */
+		alloc_mask = memalloc_noio_flags(gfp_mask);
+
+		page = __alloc_pages_slowpath(alloc_mask, order, &ac);
+	}
+
+	if (kmemcheck_enabled && page)
+		kmemcheck_pagealloc_alloc(page, order, gfp_mask);
+
+	trace_mm_page_alloc(page, order, alloc_mask, ac.migratetype);
+
+out:
+	/*
+	 * When updating a task's mems_allowed, it is possible to race with
+	 * parallel threads in such a way that an allocation can fail while
+	 * the mask is being updated. If a page allocation is about to fail,
+	 * check if the cpuset changed during allocation and if so, retry.
+	 */
+	if (unlikely(!page && read_mems_allowed_retry(cpuset_mems_cookie)))
+		goto retry_cpuset;
+
+	return page;
+```
+
+首先`get_page_from_freelist()`会去尝试分配物理页面，如果这里分配失败，就会调用到`__alloc_pages_slowpath()`函数，这个函数会处理许多特殊的场景。这里假设在理想情况下，`get_page_from_freelist()`能分配成功；
+
+```
+/*
+ * get_page_from_freelist goes through the zonelist trying to allocate
+ * a page.
+ */
+static struct page *
+get_page_from_freelist(gfp_t gfp_mask, unsigned int order, int alloc_flags,
+						const struct alloc_context *ac)
+{
+	struct zonelist *zonelist = ac->zonelist;
+	struct zoneref *z;
+	struct page *page = NULL;
+	struct zone *zone;
+	nodemask_t *allowednodes = NULL;/* zonelist_cache approximation */
+	int zlc_active = 0;		/* set if using zonelist_cache */
+	int did_zlc_setup = 0;		/* just call zlc_setup() one time */
+	bool consider_zone_dirty = (alloc_flags & ALLOC_WMARK_LOW) &&
+				(gfp_mask & __GFP_WRITE);
+	int nr_fair_skipped = 0;
+	bool zonelist_rescan;
+
+zonelist_scan:
+	zonelist_rescan = false;
+
+	/*
+	 * Scan zonelist, looking for a zone with enough free.
+	 * See also __cpuset_node_allowed() comment in kernel/cpuset.c.
+	 */
+	for_each_zone_zonelist_nodemask(zone, z, zonelist, ac->high_zoneidx,
+								ac->nodemask) {
+```
+
+`get_page_from_freelist()`函数首先需要先判断可以从哪一个zone来分配内存。`for_each_zone_zonelist_nodemask`宏扫描内存节点中的zonelist去查找合适分配内存的zone。
+
+```
+/**
+ * for_each_zone_zonelist_nodemask - helper macro to iterate over valid zones in a zonelist at or below a given zone index and within a nodemask
+ * @zone - The current zone in the iterator
+ * @z - The current pointer within zonelist->zones being iterated
+ * @zlist - The zonelist being iterated
+ * @highidx - The zone index of the highest zone to return
+ * @nodemask - Nodemask allowed by the allocator
+ *
+ * This iterator iterates though all zones at or below a given zone index and
+ * within a given nodemask
+ */
+#define for_each_zone_zonelist_nodemask(zone, z, zlist, highidx, nodemask) \
+	for (z = first_zones_zonelist(zlist, highidx, nodemask, &zone);	\
+		zone;							\
+		z = next_zones_zonelist(++z, highidx, nodemask),	\
+			zone = zonelist_zone(z))			\
+```
+
+`for_each_zone_zonelist_nodemask`首先通过first_zones_zonelist()从给定的zoneidx开始查找，这个给定的zoneidx就是highidx，之前通过gfp_zone()函数转换得来的。
+
+```
+/**
+ * first_zones_zonelist - Returns the first zone at or below highest_zoneidx within the allowed nodemask in a zonelist
+ * @zonelist - The zonelist to search for a suitable zone
+ * @highest_zoneidx - The zone index of the highest zone to return
+ * @nodes - An optional nodemask to filter the zonelist with
+ * @zone - The first suitable zone found is returned via this parameter
+ *
+ * This function returns the first zone at or below a given zone index that is
+ * within the allowed nodemask. The zoneref returned is a cursor that can be
+ * used to iterate the zonelist with next_zones_zonelist by advancing it by
+ * one before calling.
+ */
+static inline struct zoneref *first_zones_zonelist(struct zonelist *zonelist,
+					enum zone_type highest_zoneidx,
+					nodemask_t *nodes,
+					struct zone **zone)
+{
+	struct zoneref *z = next_zones_zonelist(zonelist->_zonerefs,
+							highest_zoneidx, nodes);
+	*zone = zonelist_zone(z);
+	return z;
+}
+```
+
+`first_zones_zonelist()`函数会调用`next_zones_zonelist()`函数来计算zoneref，最后返回zone数据结构；
+
+```/* Returns the next zone at or below highest_zoneidx in a zonelist */
+struct zoneref *next_zones_zonelist(struct zoneref *z,
+					enum zone_type highest_zoneidx,
+					nodemask_t *nodes)
+{
+	/*
+	 * Find the next suitable zone to use for the allocation.
+	 * Only filter based on nodemask if it's set
+	 */
+	if (likely(nodes == NULL))
+		while (zonelist_zone_idx(z) > highest_zoneidx)
+			z++;
+	else
+		while (zonelist_zone_idx(z) > highest_zoneidx ||
+				(z->zone && !zref_in_nodemask(z, nodes)))
+			z++;
+
+	return z;
+}
+```
+
+计算zone的核心函数在`next_zones_zonelist()`函数中，这里highest_zoneidx是gfp_zone()函数计算分配掩码得来。zonelist有一个zoneref数组，**zoneref数据结构里有一个成员zone指针会指向zone数据结构**，还有一个zone_index成员指向zone的编号。zone在系统处理时会初始化这个数组，具体函数在`build_zonelists_node()`中。在ARM Vexpress平台中，zone类型、zoneref[]数组和zoneidx的关系如下：
+
+```
+ZONE_HIGHMEM	__zonerefs[0]->zone_index=1
+ZONE_NORMAL		__zonerefs[1]->zone_index=0
+```
+
+zonerefs[0]表示ZONE_HIGHMEM，其zone编号zone_index的值为1；zonerefs[1]表示ZONE_NORMAL，其zone的编号zone_index为0。也就是说，基于zone的设计思想是：分配物理页面时会优先考虑ZONE_HIGHMEM，因为ZONE_HIGHMEM在zonelist中排在ZONE_NORMAL前面；
+
+回到我们之前的例子，gfp_zone(GFP_KERNEL)函数返回0，即highest_zoneidx为0，而这个内存节点的第一个zone是ZONE_HIGHMEM，其zone编号zone_index的值为1.因此在`next_zones_zonelist()`中，z++，最终first_zones_zonelist()函数会返回ZONE_NORMAL。在`for_each_zone_zonelist_nodemask()`遍历过程中也只能遍历ZONE_NORMAL这一个zone了。
+
+
+
