分配物理内存

--- a/kernel/memory/4. 分配物理页面/1.伙伴系统分配内存.md
+++ b/kernel/memory/4. 分配物理页面/1.伙伴系统分配内存.md
@@ -375,9 +375,102 @@ ZONE_HIGHMEM	__zonerefs[0]->zone_index=1
 ZONE_NORMAL		__zonerefs[1]->zone_index=0
 ```
 
-zonerefs[0]表示ZONE_HIGHMEM，其zone编号zone_index的值为1；zonerefs[1]表示ZONE_NORMAL，其zone的编号zone_index为0。也就是说，基于zone的设计思想是：分配物理页面时会优先考虑ZONE_HIGHMEM，因为ZONE_HIGHMEM在zonelist中排在ZONE_NORMAL前面；
+zonerefs[0]表示ZONE_HIGHMEM，其zone编号zone_index的值为1；zonerefs[1]表示ZONE_NORMAL，其zone的编号zone_index为0。也就是说，基于zone的设计思想是：**分配物理页面时会优先考虑ZONE_HIGHMEM，因为ZONE_HIGHMEM在zonelist中排在ZONE_NORMAL前面**；
 
 回到我们之前的例子，gfp_zone(GFP_KERNEL)函数返回0，即highest_zoneidx为0，而这个内存节点的第一个zone是ZONE_HIGHMEM，其zone编号zone_index的值为1.因此在`next_zones_zonelist()`中，z++，最终first_zones_zonelist()函数会返回ZONE_NORMAL。在`for_each_zone_zonelist_nodemask()`遍历过程中也只能遍历ZONE_NORMAL这一个zone了。
 
+再举一个例子，分配掩码GFP_HIGHUSER_MOVABLE，GFP_HIGHUSER_MOVEABLE包含了__GFP_HIGHMEM，那么next_zones_zonelist()函数返回哪个zone呢？
 
+GFP_HIGHUSER_MOVABLE的值为0x200da，那么gfp_zone(GFP_HIGHUSER_MOVABLE)函数等于2，即highest_zoneidx为2，而这个内存节点的第一个ZONE_HIGHME，其zone编号zone_index的值为1；
+
+- 在`first_zones_zonelist()`函数中，由于第一个zone的zone_index值小于highest_zoneidx，因此会返回ZONE_HIGHMEM。
+
+- 在`for_each_zone_zonelist_nodemask()`函数中，next_zones_zonelist(++z, highidx, nodemask)依然会返回ZONE_NORMAL；
+
+- 因此这里会遍历ZONE_HIGHMEM和ZONE_NORMAL，这两个zone，但是会先遍历ZONE_HIGHMEM，然后才是ZONE_NORMAL。
+
+  要正确理解`for_each_zone_zonelist_nodemask()`这个宏的行为，需要理解如下两个方面：
+
+  - highest_zoneidx是怎么计算得来的，即如何解析分配掩码，这是gfp_zone()函数的职责。
+  - 每个内存节点都有一个struct pglist_data数据结构，其成员node_zonelists是一个struct zonelist数据结构，zonelist中包含了struct zoneref __zonerefs[]数组来描述这些zone。其中ZONE_HIGHMEM排在前面，并且 `_zonerefs[0]->zone_index=1`，ZONE_NORMAL排在后面，且 _zonerefs[1]->zone_index=0；
+
+  
+
+  
+  
+  
+  
+  上述这些设计让人感觉复杂，但是这是正确理解以zone为基础的物理页面分配机制的基石。（说实话zone的分配实在是奇妙~）
+  
+  
+  
+  在`__alloc_page_nodemask()`的第24行代码调用first_zones_zonelist()，计算出`preferred_zoneref`并且保存到`ac.classzone_idx`变量中，该变量在kswapd内核线程中还会用到。例如以GFP_KERNEL为分配掩码，preferred_zone指的是ZONE_NORMAL，ac.classzone_idx的值为0；
+  
+  回到get_page_from_freelist()函数中，for_each_zone_zonelist_nodemask()找到了接下来可以从哪些zone中分配内存，下面做一些必要的检查；
+  
+  ```
+  [get_page_from_freelist()]
+  ....
+  		if (cpusets_enabled() &&
+  			(alloc_flags & ALLOC_CPUSET) &&
+  			!cpuset_zone_allowed(zone, gfp_mask))
+  				continue;
+  		/*
+  		 * Distribute pages in proportion to the individual
+  		 * zone size to ensure fair page aging.  The zone a
+  		 * page was allocated in should have no effect on the
+  		 * time the page has in memory before being reclaimed.
+  		 */
+  		if (alloc_flags & ALLOC_FAIR) {
+  			if (!zone_local(ac->preferred_zone, zone))
+  				break;
+  			if (test_bit(ZONE_FAIR_DEPLETED, &zone->flags)) {
+  				nr_fair_skipped++;
+  				continue;
+  			}
+  		}
+  		/*
+  		 * When allocating a page cache page for writing, we
+  		 * want to get it from a zone that is within its dirty
+  		 * limit, such that no single zone holds more than its
+  		 * proportional share of globally allowed dirty pages.
+  		 * The dirty limits take into account the zone's
+  		 * lowmem reserves and high watermark so that kswapd
+  		 * should be able to balance it without having to
+  		 * write pages from its LRU list.
+  		 *
+  		 * This may look like it could increase pressure on
+  		 * lower zones by failing allocations in higher zones
+  		 * before they are full.  But the pages that do spill
+  		 * over are limited as the lower zones are protected
+  		 * by this very same mechanism.  It should not become
+  		 * a practical burden to them.
+  		 *
+  		 * XXX: For now, allow allocations to potentially
+  		 * exceed the per-zone dirty limit in the slowpath
+  		 * (ALLOC_WMARK_LOW unset) before going into reclaim,
+  		 * which is important when on a NUMA setup the allowed
+  		 * zones are together not big enough to reach the
+  		 * global limit.  The proper fix for these situations
+  		 * will require awareness of zones in the
+  		 * dirty-throttling and the flusher threads.
+  		 */
+  		if (consider_zone_dirty && !zone_dirty_ok(zone))
+  			continue;
+  .....
+  ```
+  
+  下面代码用于检测当前zone的watermark水位是否充足。
+  
+  ```
+  
+  ```
+  
+  zone数据结构中有一个成员watermark记录各种水位的情况。系统定义了3种水位，分别是`WMARK_MIN`、`WMARK_LOW`和`WMARK_HIGH`。watermark水位的计算在`__setup_per_zone_wmarks()`函数中。
+  
+  
+  
+  
+  
+  
 
