--- a/kernel/memory/5. slab分配器/简介.md
+++ b/kernel/memory/5. slab分配器/简介.md
@@ -50,5 +50,36 @@ void *i915_gem_object_alloc(struct drm_device *dev)
 }
 ```
 
+另外一个大量使用slab机制的是kmalloc()函数接口。kmem_cache_create()函数用于创建自己的换成你描述符，kmalloc()函数用于创建通用的缓存，类似于用户空间的C标准库malloc()函数。
 
+下面来看一个例子，在ARM Vexpress 平台上创建名为“figo_object”的slab描述符，大小为20Byte，align为8Byte，flags为0，假设L1 Cache line大小为16Byte，我们可以编写一个简单的内核模块来实现上述需求：
+
+```
+static struct kmem_cache *fcache;
+static void *buf;
+static int __init fcache_init(void
+{
+	fcache = kmem_cache_create("figo_object", 20, 8, NULL);
+	if(!fcache) {
+		kmem_cache_destroy(fcache);
+		return -ENOMEM;
+	}
+	
+	buf = kmem_cache_zalloc(fcache, GFP_KERNEL);
+	return 0;
+}
+
+static void __exit fcache_exit(void)
+{
+	kmem_cache_free(fcache, buf);
+	kmem_cache_destroy(fcache);
+}
+
+module_init(fcache_init);
+module_exit(fcache_exit);
+```
+
+上述例子为示范来阅读slab分配器相关代码，这样更易于理解。
+
+另外，为了更好的理解代码，可以通过Qemu调试内核的方式来跟踪和调试slab代码，在gdb设置条件断点来捕捉，例如设置断点为“b kmem_cache_create if(size == 20 && align == 8)”。注意，__kmem_cache_alias()函数有可能找到一个合适的现有slab描述符复用，所以最好注释掉这行代码
 
