--- a/kernel/memory/4. 分配物理页面/2. 释放页面.md
+++ b/kernel/memory/4. 分配物理页面/2. 释放页面.md
@@ -162,5 +162,61 @@ __find_buddy_index(unsigned long page_idx, unsigned int order)
 
 page_idx为0x10，order为1，最后计算结果为0x12。
 
-（3）那么buddy就是内存块A的临近内存块 
+（3）那么buddy就是内存块A的临近内存块B了 ，内存块B在pageblock的起始地址为0x12。
+
+（4）接下来通过page_is_buddy()函数来检查内存块B是不是空闲的内存块。
+
+```
+/*
+ * This function checks whether a page is free && is the buddy
+ * we can do coalesce a page and its buddy if
+ * (a) the buddy is not in a hole &&
+ * (b) the buddy is in the buddy system &&
+ * (c) a page and its buddy have the same order &&
+ * (d) a page and its buddy are in the same zone.
+ *
+ * For recording whether a page is in the buddy system, we set ->_mapcount
+ * PAGE_BUDDY_MAPCOUNT_VALUE.
+ * Setting, clearing, and testing _mapcount PAGE_BUDDY_MAPCOUNT_VALUE is
+ * serialized by zone->lock.
+ *
+ * For recording page's order, we use page_private(page).
+ */
+static inline int page_is_buddy(struct page *page, struct page *buddy,
+							unsigned int order)
+{
+	if (!pfn_valid_within(page_to_pfn(buddy)))
+		return 0;
+
+	if (page_is_guard(buddy) && page_order(buddy) == order) {
+		if (page_zone_id(page) != page_zone_id(buddy))
+			return 0;
+
+		VM_BUG_ON_PAGE(page_count(buddy) != 0, buddy);
+
+		return 1;
+	}
+
+	if (PageBuddy(buddy) && page_order(buddy) == order) {
+		/*
+		 * zone check is done late to avoid uselessly
+		 * calculating zone/node ids for pages that could
+		 * never merge.
+		 */
+		if (page_zone_id(page) != page_zone_id(buddy))
+			return 0;
+
+		VM_BUG_ON_PAGE(page_count(buddy) != 0, buddy);
+
+		return 1;
+	}
+	return 0;
+}
+```
+
+内存块在buddy中并且order也相同，该函数返回1；
+
+（5）如果发现内存块B也是空闲内存，并且order也等于1，那么我们找到了一块志同道合的空闲伙块，把它从空闲链表中摘下来，以便和内存块A合并到高一阶的空闲链表中。
+
+（6）这时combined_idx指向内存块A的起始地址。order++表示继续在附近寻找有没有可能合并的相邻的内存块，这次要查找的order等于2，也就是4个page大小的内存块。
 
